--- a/config.toml
+++ b/config.toml
@@ -99,3 +99,10 @@ googleAnalytics = "UA-92888611-1" # Enable Google Analytics by entering your tra
     pre = "<i class='fa fa-road'></i>"
     url = "https://calendly.com/sampsonc"
     weight = 999
+
+  [[menu.main]]
+    name = "Links"
+    pre = "<i class='fa fa-road'></i>"
+    url = "//links/"
+    weight = 1001
+
