--- a/config.toml
+++ b/config.toml
@@ -89,6 +89,12 @@ disqusShortname = "chsus" # Enable Disqus comments by entering your Disqus short
     weight = -101
 
   [[menu.main]]
+    name = "Meet"
+    pre = "<i class='fa fa-road'></i>"
+    url = "https://calendly.com/sampsonc"
+    weight = -102
+
+  [[menu.main]]
     name = "appsec.fyi"
     pre = "<i class='fa fa-road'></i>"
     url = "https://appsec.fyi/"
