--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ disqusShortname = "chsus" # Enable Disqus comments by entering your Disqus short
   twitter = "chs"
   #instagram = "username"
   linkedin = "carlsampson"
-  #telegram = "username"
+  telegram = "sampsonc"
   github = "sampsonc"
   #gitlab = "username"
   #bitbucket = "username"
