--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,4 +33,4 @@ jobs:
       run: hugo --minify
  
     - name: Copy to webserver
-      run: rsync -avz --delete public/ chs@chs.us:chs.us
+      run: rsync -avz --delete public/ chs@167.71.190.204:chs.us
