--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,8 @@ jobs:
  
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        ref: master
  
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
