--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,3 +36,6 @@ jobs:
  
     - name: Copy to webserver
       run: rsync -avz --delete public/ chs@chs.us:chs.us/
+
+    -name: ls directory
+      run: ls -al /home/runner/work/chs.us.v3/chs.us.v3
