--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,9 +33,9 @@ jobs:
  
     - name: Build
       run: hugo --minify
+
+    - name: ls directory
+      run: ls -al /home/runner/work/chs.us.v3/chs.us.v3/public
  
     - name: Copy to webserver
       run: rsync -avz --delete public/ chs@chs.us:chs.us/
-
-    - name: ls directory
-      run: ls -al /home/runner/work/chs.us.v3/chs.us.v3/content
