--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,10 +34,7 @@ jobs:
     - name: Build
       run: hugo --minify
 
-    - name: ls directory
-      run: ls -al /home/runner/work/chs.us.v3/chs.us.v3/public
-
-    - name: Make hidden dir anc copy
+    - name: Make hidden dir and copy
       run: mkdir public/.well-known & cp content/.well-known/* public/.well-known
  
     - name: Copy to webserver
