--- a/config.toml
+++ b/config.toml
@@ -122,3 +122,8 @@ disqusShortname = "chsus" # Enable Disqus comments by entering your Disqus short
   [markup.goldmark]
     [markup.goldmark.renderer]
         unsafe=true
+
+[sitemap]
+  changefreq = 'monthly'
+  filename = 'sitemap.xml'
+  priority = 0.5
