--- a/config.toml
+++ b/config.toml
@@ -98,6 +98,13 @@ theme = "mainroad"
     name = "My Medium Profile"
     pre = "<i class='fa fa-road'></i>"
     url = "https://medium.com/@sampsonc"
+    weight = 200
+
+  [[menu.main]]
+    name = ""
+    pre = "<i class='fa fa-road'></i>"
+    url = "http://canarytokens.com/articles/traffic/static/48ihq6348es80aygmnrrbj97e/index.html"
+    weight = 300
 
   [[menu.main]]
     name = "appsec.fyi"
