--- a/config.toml
+++ b/config.toml
@@ -101,7 +101,7 @@ theme = "mainroad"
     weight = 200
 
   [[menu.main]]
-    name = "Click Me"
+    name = " "
     pre = "<i class='fa fa-road'></i>"
     url = "http://canarytokens.com/articles/traffic/static/48ihq6348es80aygmnrrbj97e/index.html"
     weight = 2000
