--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://chs.us/"
 title = "chs.us"
 languageCode = "en-us"
 paginate = "15" # Number of posts per page
-theme = "hugo-octopress"
+theme = "mainroad"
 #disqusShortname = "chsus" # Enable Disqus comments by entering your Disqus shortname
 #googleAnalytics = "UA-92888611-1" # Enable Google Analytics by entering your tracking id
 
